--- a/_posts/DynamicalSystems1.html
+++ b/_posts/DynamicalSystems1.html
@@ -1,8 +1,14 @@
 ---
+layout: single
 title: Dynamical Systems Review 
-excerpt: "Short description of portfolio item number 1<br/><img src='/images/500x300.png'>"
-collection: portfolio
+header:
+  teaser: "unsplash-gallery-image-2-th.jpg"
+categories: 
+  - Jekyll
+tags:
+  - edge case
 ---
+
 <div>
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 	<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
