--- a/_portfolio/DynamicalSystems1.html
+++ b/_portfolio/DynamicalSystems1.html
@@ -1,6 +1,6 @@
 ---
 title: Dynamical Systems Review 
-excerpt: "Short description of portfolio item number 1<br/><img src='/images/500x300.png'>"
+excerpt: "<br/><img src='/images/500x300.png'>"
 collection: portfolio
 author: Mason A. McCallum
 ---
